--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ homepage: true
 {% endfor %}
 
 {% for post in posts offset:1 %}
- {% cycle 'add row' : '<div class="row">', nil, nil, %}
+{% cycle 'add row' : '<div class="row">', '<!--for fun-->', '<!--for fun-->' %}
 	<div class="col-md-4">
 		<a href="{{site.baseurl}}{{post.url}}">
 			<div class="well well-post">
@@ -27,7 +27,7 @@ homepage: true
 			 	<div class="well-date">{% include date-french.html %}</div>
 			 	<!--  <a href="{{site.baseurl}}{{post.tags}}"><div class="well-tag"><i class="fa fa-tag" aria-hidden="true"></i> {{ post.tags }}</div></a>-->
 			</div>
-	</div>
-{% cycle 'end row' : nil, nil, '</div>' %}
+      </div>
+{% cycle 'end row' : '<!--just-->', '<!--just-->', '</div>' %}
+
 {% endfor %}
-</div>
